src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>CompanySignedBy__c</fullName>
        <description>Phase 1</description>
        <label>Company Sign By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanySignedDateTime__c</fullName>
        <description>Phase 1</description>
        <label>Company Signed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompanySignedTitle__c</fullName>
        <description>Phase 1</description>
        <label>Company Sign Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Phase 1</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractFee__c</fullName>
        <description>Phase 1</description>
        <label>Contract Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <formula>CompanySignedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractSummaryInternal__c</fullName>
        <description>Phase 1</description>
        <label>Contract Summary (Internal)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>Phase 1</description>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Concierge Venue</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Phase 1</description>
        <label>Contract %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CustomerSignedBy__c</fullName>
        <description>Phase 1</description>
        <label>Customer Sign By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSignedDateTime__c</fullName>
        <description>Phase 1</description>
        <label>Customer Signed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Open__c</fullName>
        <description>This field displays the days it took for the contract to get signed from date it created. It is updated by a Workflow</description>
        <label>Days Contract Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Out_For_Signature__c</fullName>
        <formula>IF((ISPICKVAL(Status, &apos;Signed&apos;)),(ABS( CompanySignedDateTime__c - CustomerSignedDateTime__c )),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Out For Signature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Phase 1</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <description>Phase 1</description>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Method__c</fullName>
        <label>Preferred Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>CNTR-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Can_Not_Edit_Concierge_Contract</fullName>
        <active>false</active>
        <description>Lock Concierge Opp Contract</description>
        <errorConditionFormula>And( 
Opportunity__r.RecordType.Name = &apos;Opp Concierge&apos;
/*,$Profile.Name &lt;&gt; &quot;System Administrator&quot; */
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>You can not create or edit the Concierge Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_company_signed_by</fullName>
        <active>true</active>
        <description>When the contract is signed, require the company signed by</description>
        <errorConditionFormula>AND(
    OR(ISNEW(),ISCHANGED(Status)),
    ISPICKVAL(Status, &apos;Signed&apos;),
    ISBLANK( CompanySignedBy__c )
   )</errorConditionFormula>
        <errorDisplayField>CompanySignedBy__c</errorDisplayField>
        <errorMessage>Company Signed By is required when marking a contract Signed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_company_signed_datetime</fullName>
        <active>true</active>
        <description>When the contract is signed, require the company signed datetime</description>
        <errorConditionFormula>AND(
    OR(ISNEW(),ISCHANGED(Status)),
    ISPICKVAL(Status, &apos;Signed&apos;),
    ISBLANK( CompanySignedDateTime__c )
   )</errorConditionFormula>
        <errorDisplayField>CompanySignedDateTime__c</errorDisplayField>
        <errorMessage>Company Signed Date/Time is required when marking a contract Signed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_customer_signed_by</fullName>
        <active>true</active>
        <description>When the contract is signed, require the customer sign date</description>
        <errorConditionFormula>AND(
    OR(ISNEW(),ISCHANGED(Status)),
    ISPICKVAL(Status, &apos;Signed&apos;),
    ISBLANK(CustomerSignedBy__c)
   )</errorConditionFormula>
        <errorDisplayField>CustomerSignedBy__c</errorDisplayField>
        <errorMessage>Customer Signed By is required when marking a contract Signed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_customer_signed_datetime</fullName>
        <active>true</active>
        <description>When the contract is signed, require the customer sign date</description>
        <errorConditionFormula>AND(
    OR(ISNEW(),ISCHANGED(Status)),
    ISPICKVAL(Status, &apos;Signed&apos;),
    ISBLANK( CustomerSignedDateTime__c)
   )</errorConditionFormula>
        <errorDisplayField>CustomerSignedDateTime__c</errorDisplayField>
        <errorMessage>Customer Signed Date/Time is required when marking a contract Signed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_payment_method_by_Statu</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Preferred_Payment_Method__c , &apos;&apos;) , ISPICKVAL( Status , &apos;Signed&apos;) )</errorConditionFormula>
        <errorDisplayField>Preferred_Payment_Method__c</errorDisplayField>
        <errorMessage>Preferred Payment Method field is required when the [Status] value on a Contract record is set to &quot;Signed&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ContractFeePerReq</fullName>
        <active>true</active>
        <description>Phase 1 - either Contract % or Contract Fee is required.</description>
        <errorConditionFormula>AND( ISNULL( Contract__c ),  ISNULL( ContractFee__c ) )</errorConditionFormula>
        <errorMessage>Please capture either Contract % or Contract Fee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_FlatFeePer</fullName>
        <active>true</active>
        <description>Phase 1 - If Payment Terms is Flat Fee, Contract % field must be Null.</description>
        <errorConditionFormula>AND ( (ISPICKVAL( PaymentTerm__c , &apos;Flat Fee $&apos;)),  NOT(ISNULL(  Contract__c )))</errorConditionFormula>
        <errorMessage>Payment Terms is Flat Fee $, please capture Contract Fee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_PercContFee</fullName>
        <active>true</active>
        <description>Phase 1 - If Payment Terms is Percentage, Contract Fee field must be Null.</description>
        <errorConditionFormula>AND ( (ISPICKVAL( PaymentTerm__c , &apos;Percentage&apos;)),  NOT(ISNULL(  ContractFee__c )))</errorConditionFormula>
        <errorMessage>Payment Terms is Percentage, please capture Contract %.</errorMessage>
    </validationRules>
</CustomObject>